# mobile-manip-task-executor

./: .gitignore
mobile_manip_interfaces/: CMakeLists.txt  package.xml
mobile_manip_interfaces/action/: ExecuteObjectTask.action
mobile_manip_interfaces/msg/: TaskState.msg
mobile_manip_task/: CMakeLists.txt  package.xml
mobile_manip_task/launch/: demo_mock.launch.py
mobile_manip_task/src/: fake_vision_node.cpp  robot_state_node.cpp  task_executor_node.cpp
